<resources>
    <string name="app_name">Q-STMS</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search By Name</string>
    <string name="login_here">LOGIN HERE</string>
    <string name="username">Username *</string>
    <string name="password">Password *</string>
    <string name="cpassword">Confirm Password *</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgetPassword">Forget Password ?</string>
    <string name="or">or</string>
    <string name="new_register_label">New user register from here</string>
    <string name="fullname">Full Name *</string>
    <string name="lname">Last Name *</string>
    <string name="email">Email *</string>
    <string name="mobile">Mobile *</string>
    <string name="task_name">Main Task Title</string>
    <string name="sub_task">Sub Task</string>
    <string name="sub_task_title">Sub Task Title</string>
    <string name="sub_task_desc">Description</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="estimated_date">Estimated Date</string>
    <string name="estimated_time_title">Es. Time Date: </string>
    <string name="days">Days</string>
    <string name="task_title">Title :</string>
    <string name="project_title">Project Title:</string>
    <string name="task_desc">Description :</string>


    <string name="idea_reject">Idea Reject Reason</string>
    <string name="idea_reject_reason">Enter Reject reason</string>
    <string name="reject1">REJECT</string>

    <string name="fullname_title">Full Name: </string>
    <string name="lname_title">Last Name </string>
    <string name="email_title">Email: </string>
    <string name="mobile_title">Mobile:  </string>
    <string name="user"> User </string>
    <string name="manager">Manager </string>
    <string name="admin">Admin </string>
    <string name="manage_employee">Manage Employees </string>
    <string name="manage_ideas">Manage Ideas </string>
    <string name="completed_ideas">Completed Ideas </string>
    <string name="view_team">View Teams </string>
    <string name="manage_task">Manage Task </string>
    <!-- User Menus-->
    <string name="menu_user1">My Task </string>
    <string name="menu_user2">My Idea</string>


    <string name="home">Home </string>
    <string name="submit">Submit </string>
    <string name="logout">Logout </string>
    <string name="profile">Profile </string>
    <string name="employee">Employee</string>
    <string name="select_user_type">Select User Type </string>
    <string name="user_account_status">User Account Status</string>
    <string name="title_activity_admin_dashboard">Dashboard</string>
    <string name="enter_employee_details">Enter Employee Details</string>
    <string name="idea_description">Project Description</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="assign">Assign</string>
    <string name="idea_title">Idea Title</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="status">Task Status Description</string>
    <string name="task_status_desc">Task Status Description :</string>
    <string name="task_status_percentage">Enter Task Status Percentage</string>
    <string name="task_complete_status">Task Complete Status </string>
    <string name="task_status">Task Status :</string>
    <string name="designation">Designation</string>
    <string name="verify">VERIFY</string>
    <string name="assign_to">Assign To :</string>
    <string name="assign_by">Assign By :</string>
    <string name="assigned_on">Time Left:</string>
    <string name="select_resources">Select Resources</string>
    <string name="select_sub_resources">Select Sub Resources</string>
    <string name="completed_on">Updated On :</string>

    <string name="active">Active</string>
    <string name="deactivated">In-Active</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="view_employee">View Employees</string>
    <string name="add_employee">Add Employees</string>
    <string name="add_subtask">Add Sub Task</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_dashboard">UserDashboard</string>
    <string name="alert_title">Alert</string>
    <string name="alert_ok">Ok</string>
    <string name="alert_cancel">Cancel</string>

    <string name="digits">abcdefghijklmnopqrstuvwxyz0123456789`~!@#$%*()_+-=[]{};\':",.?></string>
    <string name="defaultpassword">

      <a href="http://qptms.com/qptmstesting/update.html">http://qptms.com/qptmstesting/update.html</a></string>
    <string name="customer" />

</resources>
