<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stms.Launch.Login"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    android:layout_gravity="center|top"
    android:gravity="center|top"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/squarecorner_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/usernamehint"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">
                    <EditText
                        android:theme="@style/checkBoxStyle"
                        android:paddingBottom="15dp"
                        android:drawablePadding="5dp"
                        android:drawableLeft="@drawable/user"
                        android:paddingLeft="5dp"
                        android:id="@+id/username"
                        android:inputType="text"
                        android:hint="@string/username"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text=""/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordhint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">
                    <EditText
                        android:theme="@style/checkBoxStyle"
                        android:text=""
                        android:paddingBottom="15dp"
                        android:drawablePadding="5dp"
                        android:drawableLeft="@drawable/lock"
                        android:paddingLeft="5dp"
                        android:id="@+id/password"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/corpcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">
                    <EditText
                        android:theme="@style/checkBoxStyle"
                        android:text=""
                        android:paddingBottom="15dp"
                        android:drawablePadding="5dp"
                        android:drawableLeft="@drawable/lock"
                        android:paddingLeft="5dp"
                        android:id="@+id/cc"
                        android:inputType="textCapCharacters"
                        android:hint="Corp code"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:maxLength="15"/>
                </android.support.design.widget.TextInputLayout>
                <RadioGroup
                    android:id="@+id/user_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/admin"
                        android:theme="@style/checkBoxStyle"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/admin"/>
                    <RadioButton
                        android:id="@+id/user"
                        android:theme="@style/checkBoxStyle"
                        android:textColor="@color/white"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Employee"/>
                    <RadioButton
                        android:id="@+id/customer"
                        android:theme="@style/checkBoxStyle"
                        android:textColor="@color/white"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Customer"/>
                </RadioGroup>

                <Button
                    android:layout_marginTop="15dp"
                    android:id="@+id/login"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/login"
                    android:background="@drawable/roundcorner"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center|top"
            android:background="@drawable/cloud"
            android:layout_width="150dp"
            android:layout_height="150dp">

            <ImageView
                android:layout_width="500dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ems_logo" />
        </LinearLayout>

    </FrameLayout>
</LinearLayout>