<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/hi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="50dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:textColor="@color/green"
                    android:id="@+id/task_no"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="# TASK - "/>
                <TextView
                    android:id="@+id/taskId"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_title"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:hint="pending"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/red"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal"
                android:layout_marginTop="3dp">
                <LinearLayout
                    android:id="@+id/hii"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Vehicle Id:"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/vehicleId"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/black"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Customer Id:"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/customerId"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/black"
                            android:textSize="12dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Tracking Id: "
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/trackingId"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/black"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="right"
                    android:gravity="right"
                    >

                    <Button
                        android:layout_marginTop="10dp"
                        android:id="@+id/image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape1"
                        android:layout_marginRight="10dp"
                        android:text="Image" />

                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                android:visibility="gone"
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <LinearLayout
                        android:id="@+id/trackingPasswordLayout"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Tracking Password:"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/trackingPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/black"
                            android:textSize="12dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/trackNow"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@color/red"
                            android:text="Track Now"
                            android:gravity="center"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/white"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/assignLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Assign Date:"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/assignDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/black"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:gravity="right"
                            android:text="Target-Time:"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/targetTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginLeft="2dp"
                            android:gravity="right"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/black"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/go"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/assigned_on"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/timeLeft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:text=""
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/black"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/upd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:gravity="right"
                            android:text="@string/completed_on"
                            android:visibility="gone"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/completed_on"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginLeft="2dp"
                            android:gravity="right"
                            android:text="00-00-00"
                            android:visibility="gone"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/black"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:gravity="right"
                    android:id="@+id/reachedLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/chat"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:visibility="visible"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/chat"
                        android:padding="5dp"
                        />

                    <TextView
                        android:layout_gravity="center"
                        android:id="@+id/reachedCustomer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:background="@color/black"
                        android:padding="5dp"
                        android:text="Reached Customer"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/white"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_gravity="center"
                        android:id="@+id/completed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:background="@color/black"
                        android:padding="5dp"
                        android:visibility="gone"
                        android:text="Completed"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/white"
                        android:textSize="12dp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>